--- a/roles/backend/templates/docker-compose.yml.j2
+++ b/roles/backend/templates/docker-compose.yml.j2
@@ -19,10 +19,12 @@ services:
       - PORT={{ http_port }}
       - DB_HOST=db
       - DB_PORT=5432
-      - DB_USER=db_user
-      - DB_PASSWORD=db_pass
-      - DB_NAME=db_name
+      - DB_USER=${POSTGRES_USER}
+      - DB_PASSWORD=${POSTGRES_PASSWORD}
+      - DB_NAME=${POSTGRES_DB}
       - NODE_NAME={{ node_name }}
+    env_file:
+      - .env
     networks:
       - app-net
     ulimits:
@@ -32,7 +34,7 @@ services:
         hard: 40000
 
   db:
-    image: postgres:12.3-alpine
+    image: postgres:{{postgres_version}}
     deploy:
       restart_policy:
         condition: on-failure
@@ -44,9 +46,11 @@ services:
       - ./db:/var/lib/postgresql/data
       - ./db-init:/docker-entrypoint-initdb.d:ro
     environment:
-      - POSTGRES_PASSWORD=db_pass
-      - POSTGRES_DB=db_name
-      - POSTGRES_USER=db_user
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+    env_file:
+      - .env
     networks:
       - app-net
     ulimits:
